Added simulated implementation of refresh_from